--- a/MCServicesWeb/packages.config
+++ b/MCServicesWeb/packages.config
@@ -3,7 +3,8 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
   <package id="bootstrap" version="3.0.0" targetFramework="net461" />
   <package id="Dapper" version="1.50.4" targetFramework="net461" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="EntityFramework.SqlServerCompact" version="6.2.0" targetFramework="net461" />
   <package id="jQuery" version="1.10.2" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net461" />
@@ -46,6 +47,7 @@
   <package id="Microsoft.Owin.Security.Twitter.zh-Hans" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.zh-Hans" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.zh-Hans" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
