--- a/MCServicesWeb/Web.config
+++ b/MCServicesWeb/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   有关如何配置 ASP.NET 应用程序的详细信息，请访问
   https://go.microsoft.com/fwlink/?LinkId=301880
@@ -10,8 +10,8 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-MCServicesWeb-20171212045958.mdf;Initial Catalog=aspnet-MCServicesWeb-20171212045958;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="MovieDBContext"   connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Movies.mdf;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-MCServicesWeb-20171212045958.mdf;Initial Catalog=aspnet-MCServicesWeb-20171212045958;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
